--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: MeDiChI
 Type: Package
 Title: MeDiChI ChIP-chip deconvolution library
-Version: 0.3.5
-Date: Apr 12 2010
+Version: VERSION
+Date: DATE
 Author: David J Reiss
 Maintainer: David J Reiss <dreiss@systemsbiology.org>
 Description: Model-based deconvolution of genome-wide binding (ChIP-chip) data
-License: GPL version 3
+License: GPL-2
 Depends: R (>= 2.5.0), lars (>= 0.9-5), quadprog (>= 1.4-10), corpcor (>= 1.4.5), Matrix (>= 0.99875-0) 
 Suggests: zoo (>= 1.3-1), lattice, multicore (>= 0.1-3) 
 URL: http://baliga.systemsbiology.net/medichi
