fixed Version and Date in DESCRIPTION
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/medichi@5 e4590f35-bc9a-4bad-90ff-f3f982ab8841

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: MeDiChI
 Type: Package
 Title: MeDiChI ChIP-chip deconvolution library
-Version: VERSION
-Date: DATE
+Version: 0.3.5
+Date: May 22 2010
 Author: David J Reiss
 Maintainer: David J Reiss <dreiss@systemsbiology.org>
 Description: Model-based deconvolution of genome-wide binding (ChIP-chip) data
