updated doc files to generate no warnings
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/medichi@11 e4590f35-bc9a-4bad-90ff-f3f982ab8841

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -2,7 +2,7 @@ Package: MeDiChI
 Type: Package
 Title: MeDiChI ChIP-chip deconvolution library
 Version: 0.4.0
-Date: Oct  11:32:33
+Date: Oct 12 2010
 Author: David J Reiss
 Maintainer: David J Reiss <dreiss@systemsbiology.org>
 Description: Model-based deconvolution of genome-wide binding (ChIP-chip) data
